styles.css
*{
    box-sizing: border-box;
}
.testing{
    position: relative;
    width: 100%;
    height: 600px;
}

.puzzle-piece {
    height: 250px;
    width: 250px;
    border: 1px solid black;
    display: flex;
    position: relative;
}

.puzzle-square {
    height: 150px;
    width: 150px;
    border: 1px solid red;
    margin: auto;
    z-index: -1;
    background-color: red

}


.puzzle-circle {
    height: 20%;
    width: 20%;
    /* border: 1px solid blue; */
    border-radius: 50% 50% 75% 75%;
    position: absolute;
    background-color: red;
    z-index: 1;
    

}

.puzzle-circle.top {
    top: 3.5px;
    left: 100px;

}

.puzzle-circle.bottom {
    top: 153.5px;
    left: 100px;
    background-color: white;

}

.puzzle-circle.right {
    top: 100px;
    right: 3px;
    transform: rotate(90deg);


}

.puzzle-circle.left {
    top: 100px;
    left: 45px;
    transform: rotate(90deg);
    background-color: white;

}

.puzzle-piece.two{
    transform: rotate(90deg);
    left: 400px;
    top: -250px;
    /* z-index: 2; */
    animation: 3s linear 1 1s forwards slide;
    /* animation-delay: 1s;
    animation-fill-mode: forwards; */
}

@keyframes slide {
    0% {
        left: 400px;
    }
    50% {
        left: 275px;
    }
    100% {
        left: 150px;
    }
}

.puzzle-piece.three{
    left: 800px;
    top: -500px;
    transform: rotate(90deg);
    z-index: -1;
    visibility: hidden;
    animation: 3s linear 1 4s forwards slide2;
}
@keyframes slide2 {
    0% {
        visibility: visible;
        left: 650px;
    }
    50% {
        visibility: visible;
        left: 475px;
    }
    100% {
        visibility: visible;
        left: 300px;
    }
}

.puzzle-piece.four{
    top: -400px;
    visibility: hidden;
    animation: 3s linear 1 4s forwards slide3;

}

@keyframes slide3 {
    0% {
        visibility: visible;
        top: -400px;
    }
    50% {
        visibility: visible;
        top: -500px;
    }
    100% {
        visibility: visible;
        top: -600px;
    }
}

.puzzle-piece.five {
    top: -650px;
    left: 150px;
    transform:rotate(90deg);
    visibility: hidden;
    z-index: -1;
    animation: 3s linear 1 7s forwards slide4;
}

@keyframes slide4 {
    0% {
        visibility: visible;
        top: -650px;
    }
    50% {
        visibility: visible;
        top: -750px;
    }
    100% {
        visibility: visible;
        top: -850px;
    }
}


.puzzle-piece.six {
    top: -1100px;
    left: 700px;
    transform: rotate(90deg);
    visibility: hidden;
    animation: 3s linear 1 10s forwards slide5;
    z-index: -2;
}

@keyframes slide5 {
    0% {
        visibility: visible;
        left: 700px;
    }
    50% {
        visibility: visible;
        left: 500px;
    }
    100% {
        visibility: visible;
        left: 300px;
    }
}
/* top: -1100px
left: 300px */

